Fix cooperands alignment

--- a/src/components/Cooperands/Cooperands.module.scss
+++ b/src/components/Cooperands/Cooperands.module.scss
@@ -2,15 +2,22 @@
 @import '/styles/0_variables.scss';
 
 .cooperandsWrapper {
-    padding: 40px 50px;
     background-color: $primary-blue;
+    padding: 40px 0;
+    @include media(md) {
+        padding: 40px 75px;
+    }
+    .cooperandsHeadingContainer {
+        margin-bottom: 0;
+        margin-top: 20px;
+    }
     .cooperandsContainer {
         display: grid;
         gap: 10px;
         width: 100%;
-
         box-sizing: border-box;
-
+        margin-top: 0;
+        margin-bottom: 20px;
         grid-template-columns: repeat(2, 1fr);
         grid-auto-rows: auto;
 
